--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "proyecto digital",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/bin/www"
   },
   "repository": {
     "type": "git",
