--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     },
     "homepage": "https://github.com/FrancoDigio/grupo_7_Franco_Irina#readme",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
         "ejs": "^3.1.8",
         "express": "^4.18.1",
+        "express-session": "1.0",
+        "express-validator": "^6.14.2",
+        "fs": "^0.0.1-security",
         "logger": "^0.0.1",
         "method-override": "^3.0.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "nodemon": "^2.0.16"
+        "nodemon": "^1.3.3"
     }
 }
