--- a/package.json
+++ b/package.json
@@ -17,13 +17,22 @@
     },
     "homepage": "https://github.com/FrancoDigio/grupo_7_Franco_Irina#readme",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
         "ejs": "^3.1.8",
         "express": "^4.18.1",
+        "express-session": "^1.17.3",
+        "express-validator": "^6.14.2",
         "logger": "^0.0.1",
         "method-override": "^3.0.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "nodemon": "^2.0.16"
+        "mysql2": "^2.3.3",
+        "nodemon": "^2.0.16",
+        "sequelize": "5.21",
+        "sequelize-init": "^0.0.3"
+    },
+    "devDependencies": {
+        "sequelize-cli": "^6.4.1"
     }
 }
