--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "cookie-parser": "^1.4.6",
         "ejs": "^3.1.8",
         "express": "^4.18.1",
+        "express-session": "^1.17.3",
         "express-validator": "^6.14.2",
         "logger": "^0.0.1",
         "method-override": "^3.0.0",
@@ -28,6 +29,7 @@
         "multer": "^1.4.5-lts.1",
         "mysql2": "^2.3.3",
         "nodemon": "^2.0.16",
+        "passport": "^0.6.0",
         "sequelize": "5.21",
         "sequelize-init": "^0.0.3"
     },
